9章終わりまで

--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://kit.fontawesome.com/a968b15157.js" crossorigin="anonymous"></script>
     <!-- CSSファイルの読み込み -->
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style.css" />
     <title>CARAVAN</title>
   </head>
@@ -15,6 +17,12 @@
           CARAVAN
         </a>
       </h1>
+      
+      <div class="social">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
     </header>
 
     <!-- navigation -->
