--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a968b15157.js" crossorigin="anonymous"></script>
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
@@ -17,7 +18,7 @@
           CARAVAN
         </a>
       </h1>
-      
+
       <div class="social">
         <i class="fab fa-facebook-square"></i>
         <i class="fab fa-twitter-square"></i>
